<resources>
    <string name="app_name">Car plate recognition</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Enter_text">Enter text</string>
    <string name="title_check">Использовать базу данных</string>
    <string name="summary_checkbox"></string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_misc">Miscelaneous</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Данная программа предназначена для детектирования автомобильных номеров и их поиска в базе данных на WEB основе.</string>
    <string name="app_version">1.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://9gag.com/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://9gag.com/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_Enter_text">Title</string>
    <string name="title_switch1">That\'s a switch</string>
    <string name="title_switch2">Another Switch</string>
    <string name="summary_switch2">Some summary</string>
    <string name="key_checkbox">key_checkbox</string>
    <string name="Enter_text_name">Enter_text_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_switch1">key_switch1</string>
    <string name="key_switch2">key_switch2</string>
    <string name="button">Button</string>
    <string name="work">Работать</string>
    <string name="web_btn">web_btn</string>
    <string name="info">Инфо</string>
    <string name="summary">Current answer is: </string>
    <string name="dialog_title">Ultimate Question Answer</string>
    <string name="frequencyDefaultValue">3</string>
    <string name="scalefactorDefaultValue">1.1</string>
    <string name="binarizeFactorDefaultValue">0.01</string>
    <string name="frequency">frequency</string>
    <string name="frequencySummary">5</string>
    <string name="frequencyTitle">Частота распознавания</string>
    <string name="scalefactor">scalefactor</string>
    <string name="scalefactorTitle">Фактор скалирования тренировочных данных</string>
    <string name="scalefactorSummary">1.1</string>
    <string name="minNeighborsDefaultValue">4</string>
    <string name="minNeighbors">minneighbors</string>
    <string name="minNeighborsSummary">4</string>
    <string name="minNeighborsTitle">Минимальное число соседей</string>
    <string name="smoothxDefaultValue">2</string>
    <string name="smoothX">smoothX</string>
    <string name="smoothxSummary">2</string>
    <string name="smoothxTitle">SmoothX</string>
    <string name="smoothyDefaultValue">1</string>
    <string name="smoothY">smoothY</string>
    <string name="smoothySummary">1</string>
    <string name="smoothyTitle">SmoothY</string>
    <string name="binarizeFactor">binarizeFactor</string>
    <string name="binarizeFactorSummary">0.01</string>
    <string name="binarizeFactorTitle">Binarize Factor</string>
    <string name="summary">Current answer is: </string>
    <string name="dialog_title">Ultimate Question Answer</string>
    <string name="frequencyDefaultValue">3</string>
    <string name="scalefactorDefaultValue">1.1</string>
    <string name="binarizeFactorDefaultValue">0.01</string>
    <string name="frequency">frequency</string>
    <string name="frequencySummary">5</string>
    <string name="frequencyTitle">Частота распознавания</string>
    <string name="scalefactor">scalefactor</string>
    <string name="scalefactorTitle">Фактор скалирования тренировочных данных</string>
    <string name="scalefactorSummary">1.1</string>
    <string name="minNeighborsDefaultValue">4</string>
    <string name="minNeighbors">minneighbors</string>
    <string name="minNeighborsSummary">4</string>
    <string name="minNeighborsTitle">Минимальное число соседей</string>
    <string name="smoothxDefaultValue">2</string>
    <string name="smoothX">smoothX</string>
    <string name="smoothxSummary">2</string>
    <string name="smoothxTitle">SmoothX</string>
    <string name="smoothyDefaultValue">1</string>
    <string name="smoothY">smoothY</string>
    <string name="smoothySummary">1</string>
    <string name="smoothyTitle">SmoothY</string>
    <string name="binarizeFactor">binarizeFactor</string>
    <string name="binarizeFactorSummary">0.01</string>
    <string name="binarizeFactorTitle">Binarize Factor</string>
</resources>
