<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Основные параметры">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_checkbox"
            android:summary="@string/summary_checkbox"
            android:title="@string/title_check" />

    <EditTextPreference
        android:defaultValue="@string/frequencyDefaultValue"
        android:key="@string/frequency"
        android:summary="@string/frequencySummary"
        android:title="@string/frequencyTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Debug">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/debugMode"
            android:summary="@string/debugModeSummary"
            android:title="@string/debugModeTitle" />

    </PreferenceCategory>

    <PreferenceCategory android:title="OpenCV">

        <EditTextPreference
            android:defaultValue="@string/scalefactorDefaultValue"
            android:key="@string/scalefactor"
            android:summary="@string/scalefactorSummary"
            android:title="@string/scalefactorTitle" />

        <EditTextPreference
            android:defaultValue="@string/minNeighborsDefaultValue"
            android:key="@string/minNeighbors"
            android:summary="@string/minNeighborsSummary"
            android:title="@string/minNeighborsTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Tesseract">

        <EditTextPreference
            android:defaultValue="@string/grayThreshDefaultValue"
            android:key="@string/grayThresh"
            android:summary="@string/grayThreshSummary"
            android:title="@string/grayThreshTitle" />


    </PreferenceCategory>
    >


    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />


        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>